# nimm

./: .gitignore  .pre-commit-config.yaml  Play.py  README.rst  setup.cfg  setup.py
.github/workflows/: python-package-conda.yml
src/nimm/: __init__.py
src/nimm/board/: Board.py
src/nimm/game/: Game.py  __init__.py
src/nimm/player/: Player.py  __init__.py
