[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[flake8]
ignore = E203, E266, E501, W503, F403
max-line-length = 100
max-complexity = 18
select = B,C,E,F,W,T4,B9
per-file-ignores = __init__.py:F401
